*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9086 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -473,6 +473,7 @@ ExtraPlayerInfo.defensiveTrainer=Un entrenador %s de mentalidad defensiva
 ExtraPlayerInfo.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 ExtraPlayerInfo.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 ManagerButtons.writeInGuestbook=Escribir en el Libro de Visitas
+LineupShortcut.lineup=Alineación
 
 #forum
 AddLeaveConfButton.LeaveForum=Abandonar foro.
