*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9091 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -473,6 +473,7 @@ ExtraPlayerInfo.defensiveTrainer=Un %s entraineur qui est défensif.
 ExtraPlayerInfo.offensiveTrainer=Un %s entraineur qui est offensif.
 ExtraPlayerInfo.balancedTrainer=Un %s entraineur qui est équilibré.
 ManagerButtons.writeInGuestbook=Ecrire dans le Livre d'or
+LineupShortcut.lineup=Composition
 
 #forum
 AddLeaveConfButton.LeaveForum=Quitter la conférence
@@ -1045,6 +1046,7 @@ exception.error=Erreur %s
 
 log.header=Journal de FoxTrick
 # keep the following line untranslated
+log.env=Version %1, %2 plate-forme, %3 locale, %4 mise en page, %5 direction
 
 ReadHtPrefs.HTLanguageChanged=Vous devez indiquer dans les préférences générales de FoxTrick que la langue utilisée par FoxTrick soit automatiquement adaptée à celle que vous utilisez sur HT. La langue que vous utilisez actuellement pour FoxTrick est\: %s.
 
